--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "bcrypt-nodejs": "latest",
-    "body-parser": "^1.18.2",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ejs": "^2.5.8",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.12",
     "morgan": "~1.9.0",
-    "nodemon": "^1.17.3",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "nodemailer": "^4.6.4",
+    "nodemon": "^1.17.4",
+    "randomstring": "^1.1.5"
   }
 }
